# AI-Powered-Personalized-Learning-Platform

./: .env.example  .gitignore  CLAUDE.md  Development_Schedule.md  README.md  README_GITHUB_SETUP.md  TUTOR_README.md  audit_report.md  capstone_implementation_plan.md  docker-compose.yml  mlflow.db  test_config.py  test_split.py  test_streamlit_crash.py  test_tokens.py  test_weights.py  training_results.json
course_pathway/: pyproject.toml  router.py  test_crash.py  test_full_llm.py  test_llm.py
course_pathway/apps/: pathway_tester.py  slides_tester.py
course_pathway/data/: session_plans.db
course_pathway/scripts/: migrate_sqlite_to_supabase.py
course_pathway/sql/: pathway_setup.sql
course_pathway/src/pathway/: __init__.py  chromadb_reader.py  clo_fetch.py  config.py  corpus_resolver.py  generator.py
course_pathway/src/pathway/discovery/: graph_builder.py  section_builder.py
course_pathway/src/pathway/llm/: curriculum.py  naming.py  prompts.py
course_pathway/src/pathway/models/: schemas.py  synthetic.py
course_pathway/src/pathway/personalization/: personalizer.py
course_pathway/src/pathway/session/: grouper.py
course_pathway/src/pathway/storage/: pg_plan_store.py  plan_store.py
course_pathway/tests/: conftest.py  test_corpus_resolver.py  test_curriculum.py  test_graph_builder.py  test_grouper.py  test_integration.py  test_pathway_determinism.py  test_personalizer.py  test_section_builder.py
mcq_service/: pyproject.toml  streamlit_tester.py
mcq_service/artifacts/evaluation/: evaluation_report.md
mcq_service/config/: settings.py
mcq_service/evaluation/: __init__.py  run_evaluation.py
mcq_service/models/mcq_dg/: .gitignore
mcq_service/models/mcq_dg/adapter/: adapter_config.json
mcq_service/models/mcq_dg/mcq_dg_gguf_gguf/: mcq_dg_Modelfile
mcq_service/models/mcq_qg/adapter/: adapter_config.json  tokenizer_config.json
mcq_service/models/mcq_qg/mcq_qg_gguf_gguf/: Modelfile
mcq_service/notebooks/: kaggle_train_dg.ipynb  kaggle_train_qg.ipynb  mcq-dg-gguf.ipynb  mcq-qd-dg.ipynb  mcq-qg-gguf.ipynb
mcq_service/src/mcq/: __init__.py  dg.py  models.py  nvidia_client.py  orchestrator.py  qg.py  question_types.py  refine.py  scoring.py  scoring_categories.py  selector.py
mcq_service/src/mcq/prompts/: __init__.py  mcq_prompts.py
mcq_service/src/mcq/training/: __init__.py  cap_dataset.py  clean_dataset.py  data_generator.py  evaluate.py  format_dg.py  format_qg.py  merge_dataset.py  train_dg.py  train_qg.py
mcq_service/tests/: test_scoring.py  test_scoring_categories.py  test_selector.py
slides-generator/: .env.example  .gitignore  README.md  pyproject.toml
slides-generator/config/: prompts_classifier.yaml  prompts_content.yaml  prompts_synthetic_chunks.yaml
slides-generator/data/agent_training/: reclassification_report.json  targeted_reclassification_report.json
slides-generator/notebooks/: flan_t5_content_specialist.ipynb  flan_t5_content_specialist_kaggle_eval.ipynb  flan_t5_content_specialist_rtx5080.ipynb  flan_t5_content_specialist_rtx5090.ipynb  roberta_visual_classifier_kaggle.ipynb
slides-generator/output/: deck.json
slides-generator/scripts/: audit_dataset.py  clean_classifier_dataset.py  clean_dataset.py  generate_all_data.py  generate_classifier_data.py  generate_classifier_data_from_synthetic.py  generate_classifier_data_parallel.py  generate_content_data.py  generate_targeted_synthetic_chunks.py  judge_classifier_data.py  log_old_run_to_mlflow.py  reclassify_existing_data.py  recover_checkpoint.py  relabel_layered_stack.py  run_pipeline.py
slides-generator/src/slide_gen/: __init__.py
slides-generator/src/slide_gen/agents/: __init__.py  accessibility.py  code_extractor.py  content_specialist.py  judge.py  math_extractor.py  visual_classifier.py  visual_param_generator.py
slides-generator/src/slide_gen/core/: __init__.py  document_plan.py  hierarchy.py  profile_schema.py  slide_schema.py
slides-generator/src/slide_gen/data_engine/: __init__.py  key_pool.py  nvidia_client.py  pdf_loader.py  utils.py
slides-generator/src/slide_gen/pipeline/: __init__.py  content_pipeline.py  deck_assembler.py  document_processor.py  orchestrator.py  (+3 more)
slides-generator/tests/: test_code_extractor.py  test_data_validation.py  test_visual_classifier.py
slides-generator/viewer/public/: index.html
slides-generator/viewer/src/: app.js
(+514 files in other folders)
