[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcq-service"
version = "0.1.0"
description = "MCQ Assessment Service — personalized question and distractor generation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "requests>=2.31",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "transformers>=4.40",
    "datasets>=2.18",
    "peft>=0.10",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    # IMPORTANT: Unsloth install depends on your CUDA version.
    # Check https://github.com/unslothai/unsloth for the exact pip install
    # command matching your CUDA version before installing. Example:
    #   pip install "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git"
    # The pip package name is "unsloth" but versioning varies by CUDA target.
    "unsloth",
    "trl>=0.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
train = [
    "rouge-score>=0.1.2",
    "nltk>=3.8",
    "torch>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcq"]

[tool.hatch.build.targets.sdist]
include = ["src/mcq"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
