[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slide-gen"
version = "0.1.0"
description = "AI-powered Slide Generator using T5 model for textbook content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "pydantic>=2.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "transformers>=4.36",
    "torch>=2.1",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "datasets>=2.14",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slide_gen"]

[tool.hatch.build.targets.sdist]
include = ["src/slide_gen"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
